--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Интернет магазин «Кэт энерджи»</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo" href="#">
+      <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
+      <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <nav class="main-navigation">
+      <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <ul class="main-navigation__list">
+        <li class="main-navigation__item list__item list__item--current">
+          <a>Главная</a>
+        </li>
+        <li class="main-navigation__item list__item">
+          <a href="#">Каталог продукции</a>
+        </li>
+        <li class="main-navigation__item list__item">
+          <a href="#">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">«Кэт энерджи» - спортивное питание для ваших любимцев</h1>
+    <section class="presentation">
+      <h2 class="presentation__heading">Функциональное питание для котов</h2>
+      <h3 class="presentation__slogan">Занялся собой? Займись котом!</h3>
+      <img class="presentation__image" src="https://via.placeholder.com/280x270"
+        alt="Пример упаковки спортивного питания для котов">
+      <button class="presentation__button button" type="button">Подобрать программу</button>
+      <ul class="presentation__list">
+        <li class="presentation__item list__item">
+          <h2 class="item__heading">Похудение</h2>
+          <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
+            на диету! Cat Energy Slim
+            поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a href="#">Каталог slim</a>
+        </li>
+        <li class="presentation__item list__item">
+          <h2 class="item__heading">Набор массы</h2>
+          <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить
+            необходимые мышцы!
+          </p>
+          <a href="#">Каталог pro</a>
+        </li>
+      </ul>
+    </section>
+    <section class="features">
+      <h2 class="features__heading">Как это работает</h2>
+      <ul class="features__list">
+        <li class="features__item list__item">
+          <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="features__item list__item">
+          <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        </li>
+        <li class="features__item list__item">
+          <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="features__item list__item">
+          <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="example">
+      <h2 class="example__heading">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
+        в день.</p>
+      <div class="example__item">
+        <b>5 кг</b>
+        <span>Снижение веса</span>
+      </div>
+      <div class="example__item">
+        <b>60 дней</b>
+        <span>Затрачено времени</span>
+      </div>
+      <p>Затраты на питание: 15 000 руб.</p>
+      <div class="example__slider">
+        <img class="slider__image-before" src="https://via.placeholder.com/311x232"
+          alt="Кот Борис до приёма нашего корма">
+        <img class="slider__image-after" src="https://via.placeholder.com/251x240"
+          alt="Кот Борис после приёма нашего корма">
+        <span>Было</span>
+        <div class="slider__range"></div>
+        <span>Стало</span>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <section class="page-footer__contacts">
+      <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
+      <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </section>
+    <section class="page-footer__map">
+      <h2 class="visually-hidden">Карта</h2>
+      <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    </section>
+    <div class="page-footer__logo">
+      <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+    </div>
+    <section class="page-footer__social">
+      <h2 class="visually-hidden"> Давайте дружить!</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+        </li>
+      </ul>
+    </section>
+    <section class="page-footer__copyright">
+      <h2 class="visually-hidden">Разработано</h2>
+      <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+        <span>HTML Academy</span>
+        <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
+      </a>
+    </section>
+  </footer>
+</body>
+
 </html>
