--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,15 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo" href="#">
+    <a class="page-header__logo-first" href="#">
       <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <a class="page-header__logo-second">
       <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
     </a>
     <nav class="main-navigation">
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <ul class="main-navigation__list">
+      <ul class="main-navigation__list list">
         <li class="main-navigation__item list__item list__item--current">
           <a>Главная</a>
         </li>
@@ -31,24 +33,23 @@
     <h1 class="visually-hidden">«Кэт энерджи» - спортивное питание для ваших любимцев</h1>
     <section class="presentation">
       <h2 class="presentation__heading">Функциональное питание для котов</h2>
-      <h3 class="presentation__slogan">Занялся собой? Займись котом!</h3>
-      <img class="presentation__image" src="https://via.placeholder.com/280x270"
-        alt="Пример упаковки спортивного питания для котов">
+      <p class="presentation__slogan">Занялся собой? Займись котом!</p>
+      <div class="presentation__image">
+        <img src="https://via.placeholder.com/280x270" alt="Пример упаковки спортивного питания для котов">
+      </div>
       <button class="presentation__button button" type="button">Подобрать программу</button>
-      <ul class="presentation__list">
+      <ul class="presentation__list list">
         <li class="presentation__item list__item">
-          <h2 class="item__heading">Похудение</h2>
+          <h2 class="presentation__item__heading">Похудение</h2>
           <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
-            на диету! Cat Energy Slim
-            поможет вашему питомцу сбросить лишний вес.
+            на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a href="#">Каталог slim</a>
         </li>
         <li class="presentation__item list__item">
-          <h2 class="item__heading">Набор массы</h2>
+          <h2 class="presentation__item__heading">Набор массы</h2>
           <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-            поможет вашему коту нарастить
-            необходимые мышцы!
+            поможет вашему коту нарастить необходимые мышцы!
           </p>
           <a href="#">Каталог pro</a>
         </li>
@@ -56,7 +57,7 @@
     </section>
     <section class="features">
       <h2 class="features__heading">Как это работает</h2>
-      <ul class="features__list">
+      <ul class="features__list list">
         <li class="features__item list__item">
           <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
@@ -75,7 +76,8 @@
       <h2 class="example__heading">Живой пример</h2>
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день.</p>
+        в день.
+      </p>
       <div class="example__item">
         <b>5 кг</b>
         <span>Снижение веса</span>
@@ -85,11 +87,13 @@
         <span>Затрачено времени</span>
       </div>
       <p>Затраты на питание: 15 000 руб.</p>
-      <div class="example__slider">
-        <img class="slider__image-before" src="https://via.placeholder.com/311x232"
-          alt="Кот Борис до приёма нашего корма">
-        <img class="slider__image-after" src="https://via.placeholder.com/251x240"
-          alt="Кот Борис после приёма нашего корма">
+      <div class="example__slider slider">
+        <div class="slider__image-before">
+          <img src="https://via.placeholder.com/311x232" alt="Кот Борис до приёма нашего корма">
+        </div>
+        <div class="slider__image-after">
+          <img src="https://via.placeholder.com/251x240" alt="Кот Борис после приёма нашего корма">
+        </div>
         <span>Было</span>
         <div class="slider__range"></div>
         <span>Стало</span>
@@ -97,7 +101,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <section class="page-footer__contacts">
+    <section class="page-footer__contacts contacts">
       <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
       <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
@@ -108,21 +112,21 @@
     <div class="page-footer__logo">
       <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
     </div>
-    <section class="page-footer__social">
-      <h2 class="visually-hidden"> Давайте дружить!</h2>
-      <ul class="social__list">
-        <li class="social__item">
+    <section class="page-footer__social social">
+      <h2 class="visually-hidden">Давайте дружить!</h2>
+      <ul class="social__list list">
+        <li class="social__item list__item">
           <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
         </li>
-        <li class="social__item">
+        <li class="social__item list__item">
           <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
         </li>
-        <li class="social__item">
+        <li class="social__item list__item">
           <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
         </li>
       </ul>
     </section>
-    <section class="page-footer__copyright">
+    <section class="page-footer__copyright copyright">
       <h2 class="visually-hidden">Разработано</h2>
       <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
         <span>HTML Academy</span>
