--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
     <a class="page-header__logo-first" href="#">
       <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
     </a>
-    <a class="page-header__logo-second">
+    <a class="page-header__logo-second" href="#">
       <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
     </a>
     <nav class="main-navigation">
