--- a/source/index.html
+++ b/source/index.html
@@ -41,16 +41,12 @@
       <ul class="presentation__list list">
         <li class="presentation__item list__item">
           <h2 class="presentation__item__heading">Похудение</h2>
-          <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
-            на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
+          <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="#">Каталог slim</a>
         </li>
         <li class="presentation__item list__item">
           <h2 class="presentation__item__heading">Набор массы</h2>
-          <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-            поможет вашему коту нарастить необходимые мышцы!
-          </p>
+          <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="#">Каталог pro</a>
         </li>
       </ul>
@@ -74,10 +70,7 @@
     </section>
     <section class="example">
       <h2 class="example__heading">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день.
-      </p>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <div class="example__item">
         <b>5 кг</b>
         <span>Снижение веса</span>
