--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,10 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo-first" href="#">
+    <a class="page-header__logo-first">
       <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
     </a>
-    <a class="page-header__logo-second" href="#">
+    <a class="page-header__logo-second">
       <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
     </a>
     <nav class="main-navigation">
