Разметка страницы каталога

--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,7 @@
 <html class="page" lang="ru">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Подбор программы</title>
 </head>
 
@@ -21,7 +21,7 @@
           <a href="index.html">Главная</a>
         </li>
         <li class="main-navigation__item list__item">
-          <a href="#">Каталог продукции</a>
+          <a href="catalog.html">Каталог продукции</a>
         </li>
         <li class="main-navigation__item list__item list__item--current">
           <a>Подбор программы</a>
@@ -95,7 +95,7 @@
           <label class="option__title" for="vitamins">Витамины</label>
         </p>
       </div>
-      <input class="form__button button" type="submit" value="Отправить заявку">
+      <button class="form__button button" type="button">Отправить заявку</button>
     </form>
     <span class="page-main__required">* — Обязательные поля</span>
   </main>
