--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
           <a>Главная</a>
         </li>
         <li class="main-navigation__item list__item">
-          <a href="#">Каталог продукции</a>
+          <a href="catalog.html">Каталог продукции</a>
         </li>
         <li class="main-navigation__item list__item">
           <a href="form.html">Подбор программы</a>
