--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог продукции</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -252,30 +253,32 @@
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
-    <div class="page-footer__logo">
-      <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__logo">
+        <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+      </div>
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Давайте дружить!</h2>
+        <ul class="social__list list">
+          <li class="social__item list__item">
+            <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item list__item">
+            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+          </li>
+          <li class="social__item list__item">
+            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Разработано</h2>
+        <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          <span>HTML Academy</span>
+          <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
+        </a>
+      </section>
     </div>
-    <section class="page-footer__social social">
-      <h2 class="visually-hidden">Давайте дружить!</h2>
-      <ul class="social__list list">
-        <li class="social__item list__item">
-          <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
-        </li>
-        <li class="social__item list__item">
-          <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
-        </li>
-        <li class="social__item list__item">
-          <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-        </li>
-      </ul>
-    </section>
-    <section class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">Разработано</h2>
-      <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-        <span>HTML Academy</span>
-        <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
-      </a>
-    </section>
   </footer>
 </body>
 
