--- a/source/index.html
+++ b/source/index.html
@@ -4,27 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Интернет магазин «Кэт энерджи»</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo-first">
-      <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
-    </a>
-    <a class="page-header__logo-second">
-      <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
-    </a>
     <nav class="main-navigation">
+      <a class="page-header__logo-first">
+        <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
+      </a>
+      <a class="page-header__logo-second">
+        <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
+      </a>
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
         <li class="main-navigation__item list__item list__item--current">
-          <a>Главная</a>
+          <a class="list__link">Главная</a>
         </li>
         <li class="main-navigation__item list__item">
-          <a href="catalog.html">Каталог продукции</a>
+          <a class="list__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="main-navigation__item list__item">
-          <a href="form.html">Подбор программы</a>
+          <a class="list__link" href="form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -42,12 +44,12 @@
         <li class="presentation__item list__item">
           <h2 class="presentation__item__heading">Похудение</h2>
           <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a href="#">Каталог slim</a>
+          <a class="presentation__link" href="#">Каталог slim</a>
         </li>
         <li class="presentation__item list__item">
           <h2 class="presentation__item__heading">Набор массы</h2>
           <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="#">Каталог pro</a>
+          <a class="presentation__link" href="#">Каталог pro</a>
         </li>
       </ul>
     </section>
@@ -72,14 +74,14 @@
       <h2 class="example__heading">Живой пример</h2>
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <div class="example__item">
-        <b>5 кг</b>
-        <span>Снижение веса</span>
+        <span class="example__quantity">5 кг</span>
+        <span class="example__result">Снижение веса</span>
       </div>
       <div class="example__item">
-        <b>60 дней</b>
-        <span>Затрачено времени</span>
+        <span class="example__quantity">60 дней</span>
+        <span class="example__result">Затрачено времени</span>
       </div>
-      <p>Затраты на питание: 15 000 руб.</p>
+      <p class="example__cost">Затраты на питание: 15 000 руб.</p>
       <div class="example__slider slider">
         <div class="slider__image-before">
           <img src="https://via.placeholder.com/311x232" alt="Кот Борис до приёма нашего корма">
@@ -87,9 +89,9 @@
         <div class="slider__image-after">
           <img src="https://via.placeholder.com/251x240" alt="Кот Борис после приёма нашего корма">
         </div>
-        <span>Было</span>
+        <span class="slider__before">Было</span>
         <div class="slider__range"></div>
-        <span>Стало</span>
+        <span class="slider__after">Стало</span>
       </div>
     </section>
   </main>
@@ -102,30 +104,32 @@
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
-    <div class="page-footer__logo">
-      <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__logo">
+        <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+      </div>
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Давайте дружить!</h2>
+        <ul class="social__list list">
+          <li class="social__item list__item">
+            <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item list__item">
+            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+          </li>
+          <li class="social__item list__item">
+            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Разработано</h2>
+        <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          <span>HTML Academy</span>
+          <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
+        </a>
+      </section>
     </div>
-    <section class="page-footer__social social">
-      <h2 class="visually-hidden">Давайте дружить!</h2>
-      <ul class="social__list list">
-        <li class="social__item list__item">
-          <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
-        </li>
-        <li class="social__item list__item">
-          <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
-        </li>
-        <li class="social__item list__item">
-          <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-        </li>
-      </ul>
-    </section>
-    <section class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">Разработано</h2>
-      <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-        <span>HTML Academy</span>
-        <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
-      </a>
-    </section>
   </footer>
 </body>
 
