--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Интернет магазин «Кэт энерджи»</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,13 +11,13 @@
 <body class="page__body">
   <header class="page-header">
     <nav class="main-navigation">
-      <a class="main-navigation__logo-first">
-        <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
-      </a>
-      <a class="main-navigation__logo-second">
-        <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
-      </a>
-      <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-navigation__wrapper">
+        <a class="main-navigation__logo">
+          <img src="https://via.placeholder.com/33x37" width="33" height="37" alt="Интернет магазин «Кэт энерджи»">
+          <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
+        </a>
+        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      </div>
       <ul class="main-navigation__list list">
         <li class="main-navigation__item main-navigation__item--current">
           <a class="list__link">Главная</a>
@@ -70,17 +71,19 @@
       </ul>
     </section>
     <section class="example">
-      <h2 class="example__heading">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-      <div class="example__item">
-        <span class="example__quantity">5 кг</span>
-        <span class="example__result">Снижение веса</span>
+      <div class="example__wrapper">
+        <h2 class="example__heading">Живой пример</h2>
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <div class="example__item">
+          <span class="example__quantity">5 кг</span>
+          <span class="example__result">Снижение веса</span>
+        </div>
+        <div class="example__item">
+          <span class="example__quantity">60 дней</span>
+          <span class="example__result">Затрачено времени</span>
+        </div>
+        <p class="example__cost">Затраты на питание: 15 000 руб.</p>
       </div>
-      <div class="example__item">
-        <span class="example__quantity">60 дней</span>
-        <span class="example__result">Затрачено времени</span>
-      </div>
-      <p class="example__cost">Затраты на питание: 15 000 руб.</p>
       <div class="example__slider slider">
         <div class="slider__image-before">
           <img src="https://via.placeholder.com/311x232" alt="Кот Борис до приёма нашего корма">
@@ -105,7 +108,7 @@
     </section>
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+        <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Интернет магазин «Кэт энерджи»">
       </div>
       <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
@@ -125,7 +128,7 @@
         <h2 class="visually-hidden">Разработано</h2>
         <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
-          <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
+          <img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </section>
     </div>
