--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 500 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x86" alt="Cat energy pro 500 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/68x86" width="68" height="86" alt="Cat energy pro 500 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -62,7 +62,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 1000 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" alt="Cat energy pro 1000 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -85,7 +85,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 500 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" alt="Cat energy pro 500 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy pro 500 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -108,7 +108,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 1000 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" alt="Cat energy pro 1000 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -131,7 +131,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 500 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" alt="Cat energy slim 500 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy slim 500 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -154,7 +154,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 1000 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" alt="Cat energy slim 1000 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy slim 1000 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -177,7 +177,7 @@
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 500 г</h2>
             <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/72x84" alt="Cat energy slim 500 г">
+              <img class="catalog-item-image" src="https://via.placeholder.com/72x84" width="72" height="84" alt="Cat energy slim 500 г">
             </p>
           </a>
           <table class="catalog-item-table">
@@ -258,7 +258,7 @@
     </section>
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
+        <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Интернет магазин «Кэт энерджи»">
       </div>
       <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
@@ -278,7 +278,7 @@
         <h2 class="visually-hidden">Разработано</h2>
         <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
-          <img src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy">
+          <img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </section>
     </div>
