--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
       </section>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="source/js/script.js"></script>
 </body>
 
 </html>
