--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Интернет магазин «Кэт энерджи»</title>
-  <link rel="stylesheet" href="source/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -139,7 +139,7 @@
       </section>
     </div>
   </footer>
-  <script src="source/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
