--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
       <picture>
         <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-        <img src="img/logo-mobile.svg" alt="Интернет магазин «Кэт энерджи»">
+        <img class="logo-adaptive" src="img/logo-mobile.svg" alt="Интернет магазин «Кэт энерджи»">
       </picture>
     </a>
     <a class="page-header__logo-second">
