--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
           <img class="image" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x" alt="Пример упаковки спортивного питания для котов">
         </picture>
       </div>
-      <button class="presentation__button button" type="button">Подобрать программу</button>
+      <a class="presentation__button button" href="form.html">Подобрать программу</a>
       <ul class="presentation__list list container">
         <li class="presentation__item">
           <h2 class="presentation__item__heading presentation-icon">Похудение</h2>
@@ -164,7 +164,16 @@
     </section>
     <section class="map">
       <h2 class="visually-hidden">Карта</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1610883157987!5m2!1sru!2sru" width="320" height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <picture>
+        <source type="image/webp" media="(min-width: 1440px)" srcset="img/location_desktop.webp 1x, img/location_desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 768px)" srcset="img/location_tablet.webp 1x, img/location_tablet@2x.webp 2x">
+        <source type="image/webp" srcset="img/location_mobile.webp 1x, img/location_mobile@2x.webp 2x">
+
+        <source media="(min-width: 1440px)" srcset="img/location_desktop.jpg 1x, img/location_desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" srcset="img/location_tablet.jpg 1x, img/location_tablet@2x.jpg 2x">
+        <img class="map__location" src="img/location_mobile.jpg" srcset="img/location_mobile@2x.jpg 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      </picture>
+      <iframe class="map__place" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1610883157987!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo">
