--- a/source/index.html
+++ b/source/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Интернет магазин «Кэт энерджи»</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="fonts/oswaldmedium.woff" as="font">
   <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
   <link rel="preload" href="fonts/oswaldregular.woff" as="font">
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
 </head>
 
-<body class="page__body">
+<body class="body">
 
   <svg style="display: none">
     <symbol viewBox="0 0 128 24" id="footer-logo">
@@ -58,7 +58,7 @@
     <a class="page-header__logo-second">
       <img src="img/logo_two.svg" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
     </a>
-    <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+    <nav class="main-navigation main-navigation--open main-navigation--nojs">
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
         <li class="main-navigation__item main-navigation__item--current">
@@ -137,7 +137,7 @@
         <p class="example__cost">Затраты на питание: <span class="cost-number">15 000 руб.</span></p>
       </div>
       <div class="example__slider">
-        <div class="slider__image">
+        <div class="example__slider__image">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)" srcset="img/image_cat_tablet.webp 1x, img/image_cat_tablet@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/image_cat_tablet.webp 1x, img/image_cat_tablet@2x.webp 2x">
@@ -148,15 +148,15 @@
             <img src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" alt="Кот Борис">
           </picture>
         </div>
-        <div class="slider__wrapper">
-          <span class="slider__before" tabindex="0">Было</span>
-          <div class="slider__line">
+        <div class="example__slider__wrapper">
+          <span class="slider-before" tabindex="0">Было</span>
+          <div class="slider-line">
             <div class="slider-range" tabindex="0"></div>
           </div>
-          <div class="slider__scale">
+          <div class="slider-scale">
             <div class="slider-toggle"></div>
           </div>
-          <span class="slider__after" tabindex="0">Стало</span>
+          <span class="slider-after" tabindex="0">Стало</span>
         </div>
       </div>
     </section>
@@ -164,7 +164,7 @@
   <footer class="page-footer">
     <section class="contacts container">
       <h2 class="contacts__heading">Приглашаем <br> к сотрудничеству дилеров!</h2>
-      <p class="contacts__text text-content">ул. Большая<br> Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="contacts__text text-content">ул. Большая<br> Конюшенная, д. 19/8 <span class="city">Санкт-Петербург</span></p>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Карта</h2>
@@ -177,12 +177,12 @@
         <source media="(min-width: 768px)" srcset="img/location_tablet.jpg 1x, img/location_tablet@2x.jpg 2x">
         <img class="map__location" src="img/location_mobile.jpg" srcset="img/location_mobile@2x.jpg 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </picture>
-      <iframe class="map__place" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1610883157987!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe class="map__place" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1610883157987!5m2!1sru!2sru" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo">
         <svg class="footer-logo" role="img" aria-label="Интернет магазин «Кэт энерджи»" width="128" height="24">
-          <use xlink:href="#footer-logo">
+          <use xlink:href="#footer-logo"></use>
         </svg>
       </a>
       <section class="social">
@@ -222,7 +222,7 @@
       </section>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
